[package]
name = "midirave"
version = "0.1.0-pasta"
edition = "2024"
license = "MIT"
description = "A MIDI synthesizer cli tool"
homepage = "https://github.com/wsand02/midirave"
readme = "README.md"
authors = ["wsand02"]

[dependencies]
rustysynth = { git = "https://github.com/wsand02/rustysynth.git", branch = "breakallthethings", version = "1.3.6" }
hound = "3.5.1"
clap = { version = "4.5.56", features = ["derive"] }
anyhow = "1.0"
